--- a/CricBuzz/CricBuzz/src/main/resources/application.properties
+++ b/CricBuzz/CricBuzz/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CricBuzz
-spring.datasource.url=jdbc:mysql://localhost:3306/cricbuzz
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/cricbuzz
+spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
